DevOCL/src/objects/CLQ_Alleged_Rule_Violation__c.object
<CustomObject>
    <description>Rules that apply to the programs</description>
    <fields>
        <fullName>CLQ_Allegation_Description__c</fullName>
        <label>Allegation Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Alleged Rule Violations</relationshipLabel>
        <relationshipName>Alleged_Rule_Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Decision__c</fullName>
        <label>Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Substantiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubstantiated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Alleged Rule Violation object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_Rule_Description__c</fullName>
        <formula>CLQ_Rule__r.CLQ_Description__c</formula>
        <label>Rule Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rule</label>
        <referenceTo>CLQ_Rule__c</referenceTo>
        <relationshipLabel>Alleged Rule Violations</relationshipLabel>
        <relationshipName>Alleged_Rule_Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Serious_Risk_Non_Compliance__c</fullName>
        <label>Serious Risk Non-Compliance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Alleged Rule Violation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ARV-{00000000}</displayFormat>
        <label>Alleged Rule Violation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alleged Rule Violations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>